<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    <TextView android:id="@+id/tv_titleLimit"
        android:layout_marginTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/titleLimitUpdate"/>
    <EditText
    android:id="@+id/et_updateLimit"
    android:layout_width="fill_parent"
    android:hint="@string/updateLimitHintText"
    android:inputType="number"
    android:layout_height="wrap_content"/>
    <Button 
        android:id="@+id/btn_updateLimit"
        android:layout_width="fill_parent"
        android:text="@string/updateLimitButton"
        android:layout_height="wrap_content"/>
<EditText
    android:id="@+id/et_addCategory"
    android:layout_width="fill_parent"
    android:layout_marginTop="15dp"
    android:hint="@string/addCategoryHintText"
    android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_addCategory"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/addCategoryStr" />
    <TextView
        android:id="@+id/tv_header"
        android:layout_marginTop="20sp"
          android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       android:text="@string/addedCategoryList"/>
        
    <ListView android:id="@+id/lv_category"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:fadeScrollbars="false"
        android:background="#eceac1"
        android:layout_height="wrap_content"/>
   
 
</LinearLayout>
