<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    android:background="@android:color/darker_gray"
    android:layout_marginBottom="10dp"
    android:weightSum="3">
    

       <TextView
        android:id="@+id/tv_header_date"
        android:layout_width="0dp"
        android:textSize="20sp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:text="@string/header_date"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    
 
        <TextView
        android:id="@+id/tv_row_notes"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/header_notes"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
       <TextView
        android:id="@+id/tv_row_amount"
        android:layout_width="0dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/header_amount"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
   
    
 
</LinearLayout>
