<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >
<EditText
    android:id="@+id/et_addCotnact"
    android:layout_width="fill_parent"
    android:hint="@string/addContactHintText"
    android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_addContacts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/addContactStr" />
    <TextView
        android:id="@+id/tv_header"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/addedContactsList"/>
        
    <ListView android:id="@+id/lv_contacts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
        

</LinearLayout>
